--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <title>Animes Today</title>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
 </head>
@@ -35,9 +36,9 @@
 
     </header>
     <!--Conteúdo-->
-    <div class="container2 " id="conteudo" style="min-height:  600px;">
+    <div class="container2 " id="conteudo" style="min-height: 600px;">
         <div class="efeito">
-            <h1>Bem vindo a nossa página!!!</h1>
+            <h1>Bem vindo a nossa página!</h1>
             <p>Talvez você esteja preocupado(a) demais,
                 desanimado com essa ou aquela situação,
                 vivendo sob grande tensão,
