--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!--Conteúdo-->
     <div class="container2 " id="conteudo" style="min-height:  600px;">
         <div class="efeito">
-            <h1>Bem vindo a nossa página!!!</h1>
+            <h1>Bem vindo a nossa página!</h1>
             <p>Talvez você esteja preocupado(a) demais,
                 desanimado com essa ou aquela situação,
                 vivendo sob grande tensão,
