--- a/index.html
+++ b/index.html
@@ -6,52 +6,56 @@
 
     <title>Animes Today</title>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
 </head>
 
 <body>
-    <!--Container-->
 
-    <!--Cabeçalho-->
-    <header>
+    <div id="tudo">
+        <!--Container-->
 
-        <div class="container">
+        <!--Cabeçalho-->
+        <header>
 
-            <div id="logo">
+            <div class="container">
 
-                <img src="logo.jpg">
+                <div id="logo">
+
+                    <img src="logo.jpg">
+
+                </div>
 
             </div>
 
+            <nav id="menu">
+                <a href="">Home</a>
+                <a href="">Mais Assistidos</a>
+                <a href="">Lançamentos</a>
+                <a href="">Contatos</a>
+            </nav>
+
+        </header>
+        <!--Conteúdo-->
+        <div class="container2 " id="conteudo" style="min-height: 600px;">
+            <div class="efeito">
+                <h1>Bem vindo a nossa página!</h1>
+                <p>Talvez você esteja preocupado(a) demais,
+                    desanimado com essa ou aquela situação,
+                    vivendo sob grande tensão,
+                    sem saber por onde ir ou como fazer.
+                    Pois vou lhe dar alguns motivos para melhorar.
+                    Venha conhecer o nosso site e descubra as maravilhas
+                    do mundo dos animes, isso de maneira livre.
+                </p>
+            </div>
         </div>
 
-        <nav id="menu">
-            <a href="">Home</a>
-            <a href="">Mais Assistidos</a>
-            <a href="">Lançamentos</a>
-            <a href="">Contatos</a>
-        </nav>
-
-    </header>
-    <!--Conteúdo-->
-    <div class="container2 " id="conteudo" style="min-height:  600px;">
-        <div class="efeito">
-            <h1>Bem vindo a nossa página!</h1>
-            <p>Talvez você esteja preocupado(a) demais,
-                desanimado com essa ou aquela situação,
-                vivendo sob grande tensão,
-                sem saber por onde ir ou como fazer.
-                Pois vou lhe dar alguns motivos para melhorar.
-                Venha conhecer o nosso site e descubra as maravilhas
-                do mundo dos animes, isso de maneira livre.
-            </p>
-        </div>
-    </div>
-
-    <footer style="min-height: 100px;">
-        <p>@2020 - Animes Today - Assistir Animes Online Grátis</p>
-    </footer>
+        <footer style="min-height: 100px;">
+            <p>@2020 - Animes Today - Assistir Animes Online Grátis</p>
+        </footer>
+    </div><!--Fim de tudo-->
 
 </body>
 
